[package]
name = "cf-record"
version = "0.1.0"
authors = ["Imran Khan <imrankhan@teknik.io>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "0.12.*", features = ["json"] }
serde_json = "1.0.*"
serde = { version = "1.0", features = ["derive"] }
anyhow = "*"
clap = "3.0.0-beta.1"
tabwriter = "1"
lazy_static = "*"
